fix(mcp): resolve server startup and architectural audit violations (#44)
* fix(ui): resolve lazy-init crashes and refine UI interactions

Added hibernateLazyInitializer to all domain entities to prevent 500 errors during JSON serialization. Updated DesktopUi to handle specific foreign-key assignments (e.g. States in Municipalities). Bound table cells to wrappingWidthProperty to prevent huge columns from breaking layout. Ensured validation errors don't pop up stack traces.

* fix(backend): add missing department filtering and default branch departments

Added DepartmentSpecification to filter departments by branch. BranchController now automatically creates 'Storage' and 'Inbound' departments upon branch creation.

* chore: bump version to 1.8.1-SNAPSHOT

* fix(ui): implement cascading dropdowns and upgrade audit features

Adds cascading filters for locations and departments. Upgrades audit query to support optional IDs. Fixes nested table column extraction and prevents lazy init crashes during Javers commits.

* feat(backend): add live bag audit endpoint

Implement GET /api/bags/{id}/audit to calculate remaining items
by subtracting active displacements from expected quantities.

- Add findActiveByBag query to DisplacementRepository
- Add BagAuditResponse and logic to BagController with null safety
- Add unit test for audit calculation
- Update migration notes with QA pipeline info

* fix(git): move hooks to tools/ for tracking and repair AI pipeline

* fix(mcp): resolve server startup and pathing issues

- Correct gemini mcp add syntax in setup-pipeline.sh
- Fix brittle path resolution in MCP tools to handle project root cwd
- Add explicit PATH exports to git hooks for headless reliability
- Finalize and track auditing infrastructure files

* fix(audit): finalize audit pipeline and architectural hardening

- Ensure all core domain entities are audited (Branch, Department, etc.)
- Resolve adversarial findings regarding null safety and pagination
- Final infrastruct